objects/vlocity_cmt__AccountOffer__c.object
<CustomObject>
    <description>Account offer is a product or promotion offered to an account. Tracks the start date of the offer and the date of acceptance if this happens.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to which the offer is made.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Offers</relationshipLabel>
        <relationshipName>AccountPromotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product offer offered to the customer.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusChangeDate__c</fullName>
        <description>Date of status change.</description>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of this customer with respect to this offer such as qualified or not qualified.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubStatus__c</fullName>
        <description>Sub-status of this offer usually identifying the customer&apos;s disposition toward the presented offer such as accepted or rejected.</description>
        <label>SubStatus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Offer</label>
    <nameField>
        <label>Account Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>